--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -4,7 +4,65 @@ dark blue: #06365f
 light blue: #1c5380
 */
 
+* {
+  box-sizing: border-box;
+}
+
+html {
+  width: 100%;
+  height: 100%;
+}
+
 body {
+  width: 100%;
+  height: 100%;
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+}
+
+.button {
+    background-color: #1c5380;
+}
+
+.aside {
+  float: left;
+}
+
+.content-container {
+   background-image: url(images/frame.png);
+}
+
+.container {
+  float: right;
+}
+
+.subheading {
+  color: #06365f;
+  font-weight: bold;
+  font-size: 25px;
+}
+
+.bold {
+  font-weight: bold;
+}
+
+.ios-button {
+  display: inline;
+}
+
+.android-button {
+  display: inline;
+}
+
+.foot-buttons li{
+  display: inline;
+  color: #1c5380;
+  text-transform: uppercase;
+  font-weight: bold;
+  text-align: center;
+  padding: 7px;
+}
+
+.copyright {
+  color: grey;
 }
