--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -18,10 +18,16 @@ body {
   height: 100%;
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+  background: linear-gradient(180deg, #1c5380 50%, #ffffff 50%);
+
 }
 
 main {
   overflow: hidden;
+}
+
+header {
+  display: inline;
 }
 
 .button {
